--- a/sudachi-cli/Cargo.toml
+++ b/sudachi-cli/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.6.9-a1"
 authors = ["Works Applications <sudachi@worksap.co.jp>"]
 edition = "2018"
 description = "Rust version of Sudachi, the Japanese Morphological Analyzer"
-readme = "README.md"
+readme = "../README.md"
 homepage = "https://github.com/WorksApplications/sudachi.rs"
 repository = "https://github.com/WorksApplications/sudachi.rs"
 license = "Apache-2.0"
@@ -13,7 +13,7 @@ license = "Apache-2.0"
 sudachi = { path = "../sudachi" }
 
 cfg-if = "1.0.0" # MIT/Apache 2.0
-memmap2 = "0.7" # MIT/Apache 2.0
+memmap2 = "0.9" # MIT/Apache 2.0
 structopt = "0.3" # MIT/Apache 2.0
 
 [[bin]]
